syntax = "proto3";
package cn.ether.im.proto.binary;

message ImBinaryProto {
  int32 type = 1;
  ImMessageBinaryProto body = 2;
}

message ImMessageBinaryProto {
  int64 messageId = 1;
  optional string senderId = 2;
  optional int32 senderTerminal = 3;
  optional int32 messageType = 4;
  optional string content = 5;
  optional int32 contentType = 6;
  optional int64 sendTime = 7;
}









