syntax = "proto3";
package cn.ether.im.push.protoc;

message ImUserTerminal {
  string userId = 1;
  int32 terminalType = 2;
}

message ImInfo {
  int32 type = 1;
  string info = 2;
}

message ImMessage {
  int32 type = 1;
  string content = 2;
  int32 contentType = 3;
  int64 sendTime = 4;
  int64 id = 5;
  int64 messageType = 6;
  ImUserTerminal sender = 7;
}

message MessageReceivedNotice {
  int64 messageId = 1;
  string userId = 2;
}









